# REG

./: CMakeLists.txt  Makefile  README  README.md  err_code.h  kernel.cl  reg.c  semblance.c  semblance.h  simple-syntetic.cut44s.su  su.c  su.h  test-reg.sh  utils.h  vector.h
REG-latex/: assignment_3.aux  assignment_3.bbl  assignment_3.blg  assignment_3.tex  ref.bib
REG-latex/SBC/: sbc-template.aux  sbc-template.blg  sbc-template.tex
REG-latex/SBC/graphs/: .RData  .Rhistory  .final.data.swp  .ocl.data.swp  .ocl2d.data.swp  .oclconst.data.swp  .oclcstruct.data.swp  .oclinline.data.swp  .oclpressure.data.swp  .oclsimpl.data.swp  .omp.data.swp  .seq.data.swp  final.data  ocl.data  ocl2d.data  oclconst.data  oclcstruct.data  oclinline.data  oclpressure.data  oclsimpl.data  omp.data  seq.data
